# Stock-Simulator

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DisplayThread.h  GITHUB_SETUP.md  INDEX.md  PDF_CONVERSION_GUIDE.md  PROJECT_SUMMARY.md  PerformanceMonitor.h  PerformanceReport.docx  PerformanceReport.md  PerformanceReportOutline.md  PriceData.h  PriceGenerator.h  QuickStart.md  README.md  SMACalculator.h  SUBMISSION_CHECKLIST.md  SharedBuffer.h  VolatilityCalculator.h  main.cpp
